# NimbusML

./: .gitignore  .vsts-ci.yml  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-NOTICES.txt  build.cmd  build.sh  build2.sh  build27.cmd  build27.sh  nimbusml.sln  nuget.config  release-next.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: nightly-merge.yml
docs/: README.md
docs/developers/: developer-guide.md  entrypoints.md  linux-build.md  mac-build.md  windows-build.md
docs/project-docs/: contributing.md  style-guide.md
docs/release-notes/: release-1.2.0.md  release-1.3.0.md  release-1.4.0.md  release-1.5.0.md  release-1.6.0.md
local-nuget-packages/: Microsoft.Extensions.ML.0.18.2-preview2-28207-0.nupkg  Microsoft.Extensions.ML.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.AutoML.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.AutoML.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.CpuMath.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.CpuMath.symbols.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.DataView.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.DataView.symbols.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.Dnn.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.Dnn.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.Ensemble.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.Ensemble.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.EntryPoints.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.EntryPoints.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.Experimental.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.Experimental.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.FastTree.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.FastTree.symbols.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.Featurizers.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.Featurizers.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.ImageAnalytics.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.ImageAnalytics.symbols.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.LightGbm.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.LightGbm.symbols.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.Mkl.Components.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.Mkl.Components.symbols.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.OnnxConverter.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.OnnxConverter.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.OnnxTransformer.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.OnnxTransformer.symbols.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.Parquet.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.Parquet.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.Recommender.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.Recommender.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.SampleUtils.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.SampleUtils.symbols.0.18.2-preview2-28207-0.nupkg  Microsoft.ML.TensorFlow.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.TensorFlow.symbols.1.6.2-preview2-28207-0.nupkg  Microsoft.ML.TimeSeries.1.6.2-preview2-28207-0.nupkg  (+85 more)
local-nuget-packages/linux/: Microsoft.Extensions.ML.0.18.2-preview2-28124-0.nupkg  Microsoft.Extensions.ML.symbols.0.18.2-preview2-28124-0.nupkg  Microsoft.ML.1.6.2-preview2-28124-0.nupkg  Microsoft.ML.AutoML.0.18.2-preview2-28124-0.nupkg  Microsoft.ML.AutoML.symbols.0.18.2-preview2-28124-0.nupkg  Microsoft.ML.CpuMath.1.6.2-preview2-28124-0.nupkg  Microsoft.ML.CpuMath.symbols.1.6.2-preview2-28124-0.nupkg  Microsoft.ML.DataView.1.6.2-preview2-28124-0.nupkg  Microsoft.ML.DataView.symbols.1.6.2-preview2-28124-0.nupkg  Microsoft.ML.Dnn.0.18.2-preview2-28124-0.nupkg  (+32 more)
src/: CommonCpp.props
src/NativeBridge/: CMakeLists.txt  DataViewInterop.cpp  DataViewInterop.h  ManagedInterop.cpp  ManagedInterop.h  NativeBridge.vcxproj  PythonInterop.cpp  PythonInterop.h  UnixInterface.h  WinInterface.h  build.sh  dllmain.cpp  stdafx.cpp  stdafx.h  targetver.h
src/NativeBridge/inc/: RCa04612  ivalidator.h  ivehandler.h
(+1399 files in other folders)
